--- a/src/__test__/testing-environment/src/App.css
+++ b/src/__test__/testing-environment/src/App.css
@@ -1,5 +1,5 @@
 body {
-  height: 1000px;
+  height: 3000px;
   width: 3000px;
 }
 
@@ -9,4 +9,9 @@ body .bottom {
   color: white;
   position: fixed;
   width: 100%;
+}
+
+body .empty-space {
+  width: 100%;
+  height: 300px;
 }
